--- a/.github/disabled/build.yaml
+++ b/.github/disabled/build.yaml
@@ -4,11 +4,10 @@ on:
   workflow_call:
     inputs:
       name:
-        description: "Artifact Name"
-        type: string
         required: true
+        type: string
       path:
-        description: "Build Path"
+        required: false
         type: string
         default: dist
 
@@ -17,13 +16,15 @@ jobs:
     name: "Build"
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    #permissions:
+    #  contents: write
 
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
 
       - name: "Setup Python 3.13"
-        uses: actions/setup-python@v6
+        uses: actions/setup-python@v5
         with:
           python-version: "3.13"
           cache: "pip"
@@ -39,21 +40,15 @@ jobs:
 
       - name: "List Artifacts"
         env:
-          path: ${{ inputs.path }}
+          LS_DIR: ${{ inputs.path }}
         run: |
-          ls -lAh ${path}/*
-          results="$(ls -lAh ${path}/* | awk '{print $9" - "$5}')"
+          ls -lAh ${LS_DIR}/*
+          results="$(ls -lAh ${LS_DIR}/* | awk '{print $9" - "$5}')"
           markdown='Artifacts:\n```text\n'"${results}"'\n```'
           echo -e "${markdown}" >> $GITHUB_STEP_SUMMARY
 
       - name: "Upload to Actions"
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.name }}
           path: ${{ inputs.path }}
-
-      - name: "Send Failure Notification"
-        if: ${{ failure() }}
-        uses: sarisia/actions-status-discord@v1
-        with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
