--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,9 +37,6 @@ jobs:
       contents: read
 
     steps:
-      - name: "Checkout"
-        uses: actions/checkout@v5
-
       - name: "Debug event.json"
         if: ${{ !github.event.act }}
         continue-on-error: true
@@ -52,6 +49,15 @@ jobs:
         env:
           GITHUB_CTX: ${{ toJSON(github) }}
         run: echo "$GITHUB_CTX"
+
+      #- name: "Debug Environment"
+      #  if: ${{ !github.event.act }}
+      #  continue-on-error: true
+      #  run: |
+      #    env
+
+      - name: "Checkout"
+        uses: actions/checkout@v5
 
       - name: "Download Artifact"
         uses: actions/download-artifact@v6
