--- a/.github/disabled/reusable/publish.yaml
+++ b/.github/disabled/reusable/publish.yaml
@@ -66,7 +66,7 @@ jobs:
           name: ${{ inputs.name }}
           path: ${{ inputs.path }}
 
-      - name: "Verify Artifacts"
+      - name: "Debug Artifacts"
         env:
           path: ${{ inputs.path }}
           tag: ${{ github.ref_name }}
