--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,6 +4,10 @@ on:
   release:
     types: [published]
 
+env:
+  url: "https://${{ github.event.release.prerelease && 'test.' || '' }}pypi.org/p/actions-tools"
+  repository-url: "https://${{ github.event.release.prerelease && 'test' || 'upload' }}.pypi.org/legacy/"
+
 jobs:
   build:
     name: "Build"
@@ -14,14 +18,76 @@ jobs:
 
   publish:
     name: "Publish"
-    uses: ./.github/workflows/publish.yaml
-    needs: [build]
-    secrets: inherit
-    with:
-      name: "release"
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
     permissions:
       contents: write
       id-token: write
+
+    environment:
+      name: ${{ github.event.release.prerelease && 'test' || 'pypi' }}
+      url: ${{ env.url }}
+
+    steps:
+      - name: "Debug"
+        run: |
+          echo "github.ref_name: ${{ github.ref_name }}"
+          echo "name: ${{ github.event.release.prerelease && 'test' || 'pypi' }}"
+          echo "env.url: ${{ env.url }}"
+          echo "env.repository-url: ${{ env.repository-url }}"
+
+      - name: "Debug CTX github"
+        if: ${{ !github.event.act }}
+        continue-on-error: true
+        env:
+          GITHUB_CTX: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CTX"
+
+      - name: "Download Artifact"
+        uses: actions/download-artifact@v6
+        with:
+          name: "release"
+          path: "dist"
+
+      - name: "Verify Artifacts"
+        env:
+          path: "dist"
+          tag: ${{ github.ref_name }}
+        run: |
+          ls -lAh ${path}/*
+          results="$(ls -lAh ${path}/* | awk '{print $9" - "$5}')"
+          markdown='Artifacts:\n```text\n'"${results}"'\n```'
+          echo -e "${markdown}" >> $GITHUB_STEP_SUMMARY
+          ls ${path} | grep -- "-${tag}-" > /dev/null
+
+      - name: "Publish to PyPI"
+        id: publish
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: ${{ env.repository-url }}
+          #attestations: false
+
+      - name: "Summary"
+        if: ${{ always() }}
+        env:
+          tag: ${{ github.ref_name }}
+          url: ${{ env.url }}
+          repository-url: ${{ env.repository-url }}
+        run: |
+          if [ "${{ steps.publish.outcome }}" == "success" ];then
+            markdown="🎉 Published Version: \`${tag}\`\n\n[${url}](${url})\n\n"
+          else
+            markdown="⛔ Error Publishing Version: \`${tag}\`\n\n"
+          fi
+          markdown+="Repository URL: \`${repository-url}\`"
+          echo -e "${markdown}" >> $GITHUB_STEP_SUMMARY
+
+      - name: "Send Failure Notification"
+        if: ${{ failure() }}
+        uses: sarisia/actions-status-discord@v1
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
 
   release:
     name: "Release"
