--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,7 @@ jobs:
     name: "Publish"
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    needs: [build]
 
     permissions:
       contents: write
