--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -27,9 +27,9 @@ jobs:
         #with:
         #  fetch-depth: 0
 
-      # TODO: Determine if this is necessary...
-      - name: "Configure Pages"
-        uses: actions/configure-pages@v5
+      ## TODO: Determine if this is necessary...
+      #- name: "Configure Pages"
+      #  uses: actions/configure-pages@v5
 
       - name: "Setup Python 3.13"
         uses: actions/setup-python@v6
