--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -5,7 +5,7 @@ on:
   push:
     branches-ignore: [master]
     paths:
-      - ".github/workflows/docs.yaml"
+      - ".github/workflows/dev.yaml"
       - "docs/**"
 
 concurrency:
