--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,17 +2,18 @@ name: "Test"
 
 on:
   workflow_dispatch:
-  pull_request:
   #schedule:
   #  - cron: "18 18 * * 1,3,5"
   push:
     branches: [master]
-    paths:
+    paths: &paths
       - ".github/workflows/test.yaml"
       - "src/**"
       - "tests/**"
       - "pyproject.toml"
       - "requirements*.txt"
+  pull_request:
+    paths: *paths
 
 jobs:
   build:
