--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -2,12 +2,12 @@ name: "Docs"
 
 on:
   workflow_dispatch:
-  push:
-    branches: [master]
-    paths:
-      - ".github/workflows/docs.yaml"
-      - "zensical.toml"
-      - "docs/**"
+  #push:
+  #  branches: [master]
+  #  paths:
+  #    - ".github/workflows/docs.yaml"
+  #    - "zensical.toml"
+  #    - "docs/**"
 
 env:
   crawler-id: ""
