--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -32,9 +32,8 @@ jobs:
         #with:
         #  fetch-depth: 0
 
-      # TODO: Determine if this is necessary...
-      - name: "Configure Pages"
-        uses: actions/configure-pages@v5
+      #- name: "Configure Pages"
+      #  uses: actions/configure-pages@v5
 
       - name: "Setup Python 3.13"
         uses: actions/setup-python@v6
