--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -17,6 +17,7 @@ jobs:
   build:
     name: "Build"
     uses: ./.github/workflows/build-docs.yaml
+    secrets: inherit
     permissions:
       contents: read
 
