--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -21,6 +21,7 @@ jobs:
   build:
     name: "Build"
     uses: ./.github/workflows/build-docs.yaml
+    secrets: inherit
     with:
       pages: true
     permissions:
