--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -49,8 +49,10 @@ jobs:
           python -m pip install -U pip zensical
 
       - name: "Build"
+        id: build
         run: |
           zensical build -c
+          echo "version=$(zensical --version)" >> "$GITHUB_OUTPUT"
 
       - name: "Upload Artifact"
         if: ${{ !inputs.pages }}
@@ -66,6 +68,23 @@ jobs:
         uses: actions/upload-pages-artifact@v4
         with:
           path: ${{ inputs.path }}
+
+      - name: "Summary"
+        if: ${{ always() }}
+        env:
+          path: site
+          version: ${{ steps.build.outputs.version || 'unknown' }}
+        run: |
+          if [ "${{ steps.build.outcome }}" == "success" ];then
+            markdown="🚀 Build Success\n\n"
+          else
+            markdown="⛔ Build Failure\n\n"
+          fi
+          markdown+="zensical version: \`${version}\`\n\n"
+          markdown+="<details><summary>Build Output</summary>\n\n\`\`\`text\n"
+          markdown+="$(tree ${path} 2>&1 ||:)\n"
+          markdown+="\`\`\`\n\n</details>\n\n"
+          echo -e "${markdown}" >> $GITHUB_STEP_SUMMARY
 
       - name: "Send Failure Notification"
         if: ${{ !failure() }}
