--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -81,9 +81,13 @@ jobs:
             markdown="⛔ Build Failure\n\n"
           fi
           markdown+="zensical version: \`${version}\`\n\n"
-          markdown+="<details><summary>Build Output</summary>\n\n\`\`\`text\n"
-          markdown+="$(tree ${path} 2>&1 ||:)\n"
-          markdown+="\`\`\`\n\n</details>\n\n"
+          if [ -d "${path}" ];then
+            markdown+="<details><summary>Build Output</summary>\n\n\`\`\`text\n"
+            markdown+="$(tree ${path} || ls -lAhR ${path} 2>&1 ||:)\n"
+            markdown+="\`\`\`\n\n</details>\n\n"
+          else
+            markdown+="⛔ Path Not Found: ${path}\n\n"
+          fi
           echo -e "${markdown}" >> $GITHUB_STEP_SUMMARY
 
       - name: "Send Failure Notification"
