Update Docs Workflows (#16)

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -2,12 +2,13 @@ name: "Docs"
 
 on:
   workflow_dispatch:
-  #push:
-  #  branches: [master]
-  #  paths:
-  #    - ".github/workflows/docs.yaml"
-  #    - "zensical.toml"
-  #    - "docs/**"
+  push:
+    branches: [master]
+    paths:
+      - ".github/workflows/build-docs.yaml"
+      - ".github/workflows/docs.yaml"
+      - "zensical.toml"
+      - "docs/**"
 
 env:
   crawler-id: ""
@@ -20,48 +21,12 @@ concurrency:
 jobs:
   build:
     name: "Build"
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-
+    uses: ./.github/workflows/build-docs.yaml
+    secrets: inherit
+    with:
+      pages: true
     permissions:
       contents: read
-
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v5
-        #with:
-        #  fetch-depth: 0
-
-      #- name: "Configure Pages"
-      #  uses: actions/configure-pages@v5
-
-      - name: "Setup Python 3.13"
-        uses: actions/setup-python@v6
-        with:
-          python-version: "3.13"
-          cache: "pip"
-
-      - name: "Install"
-        id: install
-        run: |
-          python -m pip install -U pip zensical
-
-      - name: "Build"
-        run: |
-          zensical build -c
-
-      - name: "Upload Pages Artifact"
-        uses: actions/upload-pages-artifact@v4
-        with:
-          path: site
-
-      - name: "Send Build Failure Notification"
-        if: ${{ !failure() }}
-        continue-on-error: true
-        uses: sarisia/actions-status-discord@v1
-        with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          description: ${{ github.event.repository.html_url }}/actions/runs/${{ github.run_id }}
 
   deploy:
     name: "Deploy"
