--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -77,7 +77,7 @@ jobs:
           crawler_user_id: ${{ secrets.CRAWLER_USER_ID }}
           crawler_api_key: ${{ secrets.CRAWLER_API_KEY }}
 
-      - name: "Send Post-Deploy Failure Notification"
+      - name: "Send Failure Notification"
         if: ${{ failure() }}
         uses: sarisia/actions-status-discord@v1
         with:
