Remove paths YAML

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,14 +6,19 @@ on:
   #  - cron: "18 18 * * 1,3,5"
   push:
     branches: [master]
-    paths: &paths
+    paths:
       - ".github/workflows/test.yaml"
       - "src/**"
       - "tests/**"
       - "pyproject.toml"
       - "requirements*.txt"
   pull_request:
-    paths: *paths
+    paths:
+      - ".github/workflows/test.yaml"
+      - "src/**"
+      - "tests/**"
+      - "pyproject.toml"
+      - "requirements*.txt"
 
 jobs:
   build:
