Add Optional Github Package (#19)
- Add `get_github` method
- Cleanup other methods

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -80,6 +80,7 @@ jobs:
       - name: "Install ${{ matrix.version }}"
         run: |
           python -m pip install dist/*.whl
+          python -m pip install actions-tools[github]
 
       #- name: "Debug ${{ matrix.version }}"
       #  run: |
