--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: "Install"
         run: |
           python -m pip install -U pip
-          python -m pip install -Ur requirements.txt
+          python -m pip install --group dev
 
       - name: "Build"
         run: |
