--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -33,7 +33,6 @@ jobs:
       #      src/**
       #      tests/**
       #      pyproject.toml
-      #      requirements*.txt
 
       - name: "Setup Python 3.13"
         uses: actions/setup-python@v6
@@ -45,7 +44,7 @@ jobs:
         id: install
         run: |
           python -m pip install -U pip
-          python -m pip install -Ur requirements.txt
+          python -m pip install --group dev
           python -m pip install -e .
 
       - name: "astral-sh/ruff"
